# pypshwrd

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/pashword/: app.py  lib.py
